2002-11-13    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	now use argextract.

	* pylibs/formlib/form.py: start of clean-up, using
	fieldcontainer.py. 

	* pylibs/containers/fieldcontainer.py (FieldContainer): added
	a "storelists" property.

	* pylibs/containers/__init__.py: created a package for containers,
	in anticipation of eventually needing to write more of them.

	* pylibs/containers/fieldcontainer.py: adding a hybrid list/dict
	container that I needed for formlib.

2002-11-12    <smulloni@smullbola.smullyan.org>

	* docs/tutorial/src: (many files) various changes, still very rough
	and incomplete.

	* pylibs/argextract.py: Since this code looks like it might get used
	outside of CONNECTION, I'm moving it to its own module.

2002-11-10    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/rewrite.py: Moved rewrite hook by default to
	HaveConnection, which occurs before scoping takes place. Added
	Configuration variable, rewriteBeforeScope, to control this (if it
	has a false value, rewrite will take place in PreHandleConnection,
	as before, but it defaults to 1).  I can see arguments for both
	places, but in my case I found it troubling that auth and rewrite
	were using the same hook, although I wasn't actually see bugs
	result from it.

	* docs/tutorial/src/htdocs/games/game.comp: It is now possible to 
	add text to a story.

2002-11-08  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py (getMessageCatalog): a fix for relative paths
	in getting message catalogs that Drew had posted to the list in
	August but not checked in (probably was waiting for someone on the
	list to say it worked).

	* pylibs/ecs/xhtml.py (EMPTY_ELEMENTS): For some reason, I had "i"
	here where I clearly had begun to type "input".  Oops.

2002-11-07    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/auth/__init__.py (CookieAuthBase.logout): fix